name:                bindec
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/codebje/bindec#readme
license:             BSD3
license-file:        LICENSE
author:              Byron Ellacott
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable bindec
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , binary-bits
                     , bytestring
                     , bzlib
                     , iproute
