name:                haskmrt
version:             0.1.0.0
synopsis:            Haskell parser for MRT dump files
description:         Please see README.md
homepage:            http://github.com/codebje/hask-mrt#readme
license:             BSD3
license-file:        LICENSE
author:              Byron Ellacott
maintainer:          example@example.com
copyright:           2015 Byron Ellacott
category:            Network, Data, Parsing
build-type:          Simple
cabal-version:       >=1.10

executable bindec
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , binary-bits
                     , bytestring
                     , bzlib
                     , iproute
