name:                mrt
version:             0.1.0.0
synopsis:            Haskell parser for MRT dump files
description:         Please see README.md
homepage:            http://github.com/codebje/hask-mrt#readme
license:             BSD3
license-file:        LICENSE
author:              Byron Ellacott
maintainer:          example@example.com
copyright:           2015 Byron Ellacott
tested-with:         GHC==7.10.2
category:            Network, Data, Parsing
build-type:          Simple
cabal-version:       >=1.20
extra-source-files:  README.md
                     Setup.hs
                     stack.yaml

library
  hs-source-dirs:      src
  exposed-modules:     Data.Network.BGP
                       Data.Network.MRT
  additional-modules:  Data.Network.IP
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , binary-bits
                     , bytestring
                     , iproute

test-suite test-mrt
  ghc-options:        -Wall
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            TestHarness.hs
  default-language:   Haskell2010
  build-depends:      base, Cabal >= 1.20.0
                    , QuickCheck >= 2.4
                    , mrt

executable haskmrt
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -fwarn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , bzlib
                     , mrt

source-repository head
  type:     git
  location: git://github.com/codebje/hask-mrt.git
